<resources>
    <string name="app_name">GasTrack</string>
    <string name="title_home">Home</string>
    <string name="title_data">Data</string>
    <string name="title_notes">Notes</string>
    <string name="edit_price">0.00</string>
    <string name="button_save">Save</string>
    <string name="edit_liters">0.00</string>
    <string name="edit_perliter">0.00</string>
</resources>
